# AIPerformance

./: .env.example  .gitignore  PERFORMANCE_OPTIMIZATIONS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: deepeval.yml
datasets/: golden_dataset.json  rag_dataset.json
deepeval_results/: .gitkeep
src/: __init__.py  llm_client.py  llm_client_ollama.py  ollama_deepeval_model.py  prompt_versions.py  rag_client.py  rag_client_ollama.py
tests/: __init__.py  conftest.py  test_accuracy.py  test_hallucination.py  test_prompt_regression.py  test_rag.py
