[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepeval-security-tests"
version = "0.1.0"
description = "API security-focused DeepEval test pack"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.12.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "deepeval>=0.21.0",
]

[tool.setuptools]
packages = ["src", "tests"]
